# olddiscordbot

./: autoreactor.py  byebyecriminal.py  iss.py  join.py  main.py  memupdate.py  mod.py  music.py  nasapod.py  noticebotcode.py  population.py  pyproject.toml  speak.py  status.py  textgobrr.txt  tfl.py  tok.env  uptime.py
.cache/replit/: __replit_disk_meta.json
