[tool.poetry]
name = "repl_python3_beta_Starship-Updates"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
apscheduler = "^3.7.0"
python-dotenv = "^0.17.1"
youtube-dl = "^2021.5.16"
pyperclip = "^1.8.2"
pytz = "^2021.1"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
